[tool.poetry]
name = "eth-abi-parser"
version = "0.1.2"
description = "A human-readable ABI parser for Ethereum smart contracts"
authors = ["Sorawit Suriyakarn <swit@blockpipe.io>"]
readme = "README.md"
packages = [{ include = "eth_abi_parser" }]


[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
